# auto-cards

./: .env  .gitignore  IDEAS.md  README.md  agents.md  drizzle.config.ts  main.js  next.config.js  package.json  pnpm-lock.yaml  preload.js  prettier.config.cjs
api-spec/: Buy Item.bru  Craft Recipe.bru  Create Game.bru  Current User.bru  Fight.bru  Get All Items.bru  Get All Recipes.bru  Get Available Recipes.bru  Get Game By Id.bru  Reroll Shop.bru  Reserve Item.bru  Sell Item.bru  bruno.json  collection.bru
ml/: pyproject.toml
ml/ml/: gym.py  winRate.py
public/: manifest.json
src/ai/: decideNextAction.ts  generateReport.ts  index.ts  observeGame.ts  runAiPlaytest.ts  updateMemory.ts
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
src/auth/: ChangePasswordForm.tsx  ChangePasswordFormClient.tsx  ChangeUsernameForm.tsx  ChangeUsernameFormClient.tsx  CopyButton.tsx  CreateApiKeyForm.tsx  CreateApiKeyFormClient.tsx  CredentialsForm.tsx  CredentialsProvider.tsx  ImpersonateProvider.tsx  LoginDialog.tsx  LoginForm.tsx  LoginFormClient.tsx  ManageApiKeyForm.tsx  UserButton.tsx  auth.ts  changePassword.ts  createAPIKey.ts  credentialsSchema.ts  defaultLoginEmail.ts  dev.ts  getAllUsers.ts  getIsAdmin.ts  getMyUser.ts  getMyUserFromApiKey.ts  impersonate.ts  loginAction.ts  loginWithRedirect.ts  password.ts  registerUser.ts  sendVerificationRequestEmail.ts  user-cache.ts
src/db/: GameData.ts  db.ts  schema-auth.ts  schema-zod.ts  schema.ts
src/functions/: fetchWikipedia.function.ts
src/game/: DungeonAccess.ts  DungeonData.ts  GameData.ts  (+56 more)
(+298 files in other folders)
